[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "efile-tracking"
version = "0.1.0"
description = "Local-first dataset inventory and manifest tooling for DOJ document explorer"
authors = [{name = "Project Contributor"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "pandas>=2.1",
    "pyarrow>=14.0",
    "streamlit>=1.32",
    "plotly>=5.18",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4,<9",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["src"]
