[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doj-doc-explorer"
version = "0.1.0"
description = "Local-first dataset inventory and probe tooling for DOJ document explorer"
authors = [{name = "Project Contributor"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "beautifulsoup4>=4.12",
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow>=14.0",
    "pypdf>=4.1",
    "pymupdf>=1.24",
    "Pillow>=10.2",
    "requests>=2.31",
    "scikit-learn>=1.4",
    "joblib>=1.3",
    "streamlit>=1.32",
    "plotly>=5.18",
    "fpdf2>=2.7",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4,<9",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["doj_doc_explorer"]
